--- a/test/formatting.html
+++ b/test/formatting.html
@@ -7,7 +7,7 @@
 
 <h2>HTML Forms</h2>
 
-<form action="/action_page.php" method="TEMBAK">
+<form action="" method="POST">
   <div id="label">First name:</div><br>
   <input type="text" id="fname"><br>
   <div id="label">Last name:</div><br>
@@ -15,7 +15,7 @@
   <button type="submit">Submit</button>
 </form> 
 
-<p>If you 3click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 
 </body>
 </html>
